files/base/forgejo/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  labels:
    app: forgejo
    auto-update-hour: '04'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo:11
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: forgejo-web
              containerPort: 3000
            - name: forgejo-ssh
              containerPort: 22
          volumeMounts:
            - name: forgejo-data
              mountPath: /data
      volumes:
        - name: forgejo-data
          hostPath:
            type: DirectoryOrCreate
            path: /srv/forgejo/data
 
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  labels:
    app: forgejo
spec:
  selector:
    app: forgejo
  ports:
    - protocol: TCP
      name: forgejo-web
      port: 3000
    - protocol: TCP
      name: forgejo-ssh
      port: 22

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: forgejo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: private-ip-ranges@file
  labels:
    app: forgejo
spec:
  rules:
    - host: forgejo.192.168.122.11.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo
                port:
                  number: 3000
